# gudhi-devel

./: .appveyor.yml  .travis.yml
src/Coxeter_triangulation/example/: CMakeLists.txt  manifold_corners.cpp  manifold_tracing_aurelien.cpp  manifold_tracing_custom_function.cpp  manifold_tracing_cut_circle.cpp  manifold_tracing_socg_example.cpp  manifold_tracing_square_in_R3.cpp
src/Coxeter_triangulation/include/gudhi/: Cell_complex.h  Cell_complex_corners.h  Constraint_set.h  Implicit_manifold_intersection_oracle.h  Implicit_manifold_intersection_oracle_corners.h  Manifold_tracing.h
src/Coxeter_triangulation/include/gudhi/Functions/: Function.h  PL_approximation.h
src/Coxeter_triangulation/include/gudhi/IO/: build_mesh_from_cell_complex.h  build_mesh_from_cell_complex_corners.h  output_meshes_to_off.h
