cmake_minimum_required(VERSION 2.6)
project(Coxeter_triangulation_example)

add_executable ( Coxeter_triangulation_manifold_tracing_flat_torus_with_boundary_example manifold_tracing_flat_torus_with_boundary.cpp )
add_executable ( Coxeter_triangulation_manifold_tracing_custom_function_example manifold_tracing_custom_function.cpp )
add_executable ( Coxeter_triangulation_manifold_tracing_cut_circle_example manifold_tracing_cut_circle.cpp )
add_executable ( Coxeter_triangulation_manifold_tracing_square_in_R3_example manifold_tracing_square_in_R3.cpp )
add_executable ( Coxeter_triangulation_manifold_tracing_aurelien_example manifold_tracing_aurelien.cpp )
add_executable ( Coxeter_triangulation_manifold_tracing_socg_example manifold_tracing_socg_example.cpp )
